    symbols' addresses were "called" from.  This way one can e.g. find
    in which contexts interrupt handlers were called and it can be
    used to construction program execution callgraph
  - New "save" subcommand saves profile address and caller information
    to given file, with extra information needed for post-processing
- Debugger:
  - "dsp" subcommand added to "info" command, to show e.g. DSP stack content
  - "prg" subcommand added to "symbols" command, for loading debug
    symbols from DRI/GST symbol table in last started program
  - "step" and "next" commands added for single stepping CPU and DSP code
    -> 's' shortcut is now for "step", not "save"
  - "--disasm" option for selecting between UAE core and external CPU
    code dissassembler and setting output option flags for latter
  - Fix: when several breakpoints should have triggered
         on the same address, only first was handled
  - Fix: after breakpoint, 'c <n>' continues one instruction too little
  - Fix: tracking breakpoint values were updated only when all conditions
    matched, now they can be also used together with other conditions
  - Fix: info command crash (triggered on NetBSD)
  - Fix: disassember output bug on NetBSD (usigned char < -1 test)
  - Fix: info osheader and basebase subcommands under MiNT
  - Fix: debugger history duplicates removal
  - Fix: expression expanding CPU "pc" for DSP shortcut commands
  - Fix: expression expansion messing lines in command line history
  - Add ':quiet' option to breakpoints
  - Remote API debugger commands can also use expression expansion
  - Both single and double quotes can be used to mark expressions
  - In addition to text section offset, data and bss section offsets
    can be given when loading symbols (useful for Devpac symbols)
  - Output what value was set by options if it's not otherwise shown by UI
  - Show function arguments for GEMDOS Pexec() call and AES calls